make sure scaffold number remains readable with long species names

--- a/src/client/views/components/Layout.scss
+++ b/src/client/views/components/Layout.scss
@@ -343,6 +343,8 @@ table {
   position:absolute;
   right:0.5em;
   bottom:0.5em;
+  background-color: inherit;
+  padding-left: 0.5em;
 }
 
 .menu_item:hover,
